--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;600;700;800&display=swap" rel="stylesheet">
 
   <title>Daitool</title>
 </head>
